--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -229,7 +229,8 @@
                 </table>
               </div>
               <form name="priceForm"
-                    ng-show="editPrice">
+                    ng-show="editPrice"
+                    novalidate >
                 <table class="table">
                   <div class="form-group">
                     <tr ng-repeat="(key, priceInfo) in price"
@@ -238,20 +239,24 @@
                         <span ng-switch-when="base">
                           Basistarief
                         </span>
-                        <span ng-switch-default>
+                        <span ng-switch-default
+                              ng-class="'has-error': priceInfo.name.$invalid">
                           <input type="text"
                                  class="form-control"
-                                 ng-model="priceInfo.name" />
+                                 ng-model="priceInfo.name"
+                                 required />
                         </span>
                       </td>
                       <td ng-switch on="priceInfo.price">
                         <span ng-switch-when="0">
                           Gratis
                         </span>
-                        <span ng-switch-default>
+                        <span ng-switch-default
+                              ng-class="'has-error': priceInfo.price.$invalid">
                           <input type="number"
                                class="form-control"
-                               ng-model="priceInfo.price" />
+                               ng-model="priceInfo.price"
+                               required />
                           euro
                         </span>
                       </td>
@@ -277,7 +282,8 @@
                         <a class="btn btn-default" ng-click="cancelEditPrice()">
                           Annuleren
                         </a>
-                        <a class="btn btn-primary" ng-click="savePrice()">
+                        <a class="btn btn-primary"
+                           ng-click="validatePrice()">
                           Bewaren
                         </a>
                       </td>
@@ -290,7 +296,7 @@
                 Er ging iets fout bij het opslaan van de prijs.
               </div>
               <div ng-show="invalidPrice" class="alert alert-danger">
-                Gelieve een geldige prijs in te voeren.
+                Gelieve een geldige prijs en omschrijving in te voeren.
               </div>
 
             </div>
