--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -249,12 +249,12 @@
                                  required />
                         </span>
                       </td>
-                      <td ng-switch on="priceInfo.price">
-                        <span ng-switch-when="0">
+                      <td>
+                        <span ng-if="priceInfo.price === 0">
                           Gratis
                         </span>
-                        <span ng-switch-default>
-                          <input type="text"
+                        <span ng-if="priceInfo.price !== 0">
+                          <input type="number"
                                class="form-control"
                                name="price"
                                ng-model="priceInfo.price"
