III-1224 use currency filter

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -222,7 +222,7 @@
                         Gratis
                       </span>
                       <span ng-if="priceInfo.price != 0">
-                        {{priceInfo.price}} euro
+                        {{priceInfo.price | currency}} euro
                       </span>
                     </td>
                   </tr>
