III-1224 use a placeholder in the name input field

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -244,6 +244,7 @@
                           <input type="text"
                                  class="form-control"
                                  name="name"
+                                 placeholder="Doelgroep"
                                  ng-model="priceInfo.name"
                                  ng-class="{ 'has-error': priceInfoForm.name.$invalid && formPriceSubmitted}"
                                  required />
