III-1224 styling the priceInfo buttons

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -285,13 +285,15 @@
                     </tr>
                     <tr>
                       <td colspan="4">
-                        <a class="btn btn-default" ng-click="cancelEditPrice()">
-                          Annuleren
-                        </a>
-                        <a class="btn btn-primary"
-                           ng-click="validatePrice()">
-                          Bewaren
-                        </a>
+                        <div class="pull-right">
+                          <a class="btn btn-default" ng-click="cancelEditPrice()">
+                            Annuleren
+                          </a>
+                          <a class="btn btn-primary"
+                             ng-click="validatePrice()">
+                            Bewaren
+                          </a>
+                        </div>  
                       </td>
                     </tr>
                   </div>
