III-1224 price info component

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -184,132 +184,7 @@
           </div>
         </div>
 
-        <div class="row extra-prijs">
-          <div class="extra-task" ng-class="priceCssClass">
-            <div class="col-sm-3">
-              <em class="extra-task-label">Prijs</em>
-                <i class="fa fa-circle-o-notch fa-spin" ng-show="savingPrice"></i>
-            </div>
-            <div class="col-sm-8">
-
-              <div ng-show="price.length == 0">
-                <section>
-                  <a class="btn btn-default to-filling"
-                     ng-show="!editPrice"
-                     ng-click="priceCssClass = 'state-filling'; editingPrice()">
-                    Prijzen toevoegen
-                  </a>
-                  <a class="btn btn-link"
-                     ng-show="!editPrice"
-                     ng-click="editingPrice(true)">Gratis</a>
-                </section>
-              </div>
-              <div ng-show="price.length > 0 && !editPrice">
-                <table class="table">
-                  <thead>
-                    <td>Prijzen</td>
-                    <td>
-                      <a class="btn btn-default pull-right" ng-click="editingPrice()">
-                      Wijzigen
-                    </a>
-                    </td>
-                  </thead>
-                  <tr ng-repeat="(key, priceInfo) in price"
-                      ng-model="priceInfo">
-                    <td>{{priceInfo.name}}</td>
-                    <td>
-                      <span ng-if="priceInfo.price == 0">
-                        Gratis
-                      </span>
-                      <span ng-if="priceInfo.price != 0">
-                        {{priceInfo.price | currency}} euro
-                      </span>
-                    </td>
-                  </tr>
-                </table>
-              </div>
-              <form name="priceForm"
-                    ng-show="editPrice"
-                    novalidate >
-                <table class="table">
-                  <div class="form-group">
-                    <tr ng-repeat="(key, priceInfo) in price"
-                        ng-model="priceInfo"
-                        ng-form="priceInfoForm">
-                      <td ng-switch on="priceInfo.category">
-                        <span ng-switch-when="base">
-                          Basistarief
-                        </span>
-                        <span ng-switch-default>
-                          <input type="text"
-                                 class="form-control"
-                                 name="name"
-                                 placeholder="Doelgroep"
-                                 ng-model="priceInfo.name"
-                                 ng-class="{ 'has-error': priceInfoForm.name.$invalid && formPriceSubmitted}"
-                                 required />
-                        </span>
-                      </td>
-                      <td>
-                        <span ng-if="priceInfo.price === 0">
-                          Gratis
-                        </span>
-                        <span ng-if="priceInfo.price !== 0">
-                          <input type="number"
-                               class="form-control"
-                               name="price"
-                               ng-model="priceInfo.price"
-                               ng-class="{ 'has-error': priceInfoForm.price.$invalid && formPriceSubmitted}"
-                               required />
-                          euro
-                        </span>
-                      </td>
-                      <td ng-switch on="priceInfo.price">
-                        <a class="btn btn-link"
-                           ng-click="unsetPriceItemFree(key)"
-                           ng-switch-when="0">Prijs invoeren</a>
-                        <a class="btn btn-link"
-                           ng-click="setPriceItemFree(key)"
-                           ng-switch-default>Gratis</a>
-                      </td>
-                      <td>
-                        <span aria-hidden="true"
-                              ng-click="deletePriceItem(key)"
-                              ng-if="showPriceDelete(key)">&times;</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td colspan="4">
-                        <a class="btn btn-link" ng-click="addPriceItem()">Tarief toevoegen</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td colspan="4">
-                        <div class="pull-right">
-                          <a class="btn btn-default" ng-click="cancelEditPrice()">
-                            Annuleren
-                          </a>
-                          <a class="btn btn-primary"
-                             ng-click="validatePrice()">
-                            Bewaren
-                          </a>
-                        </div>  
-                      </td>
-                    </tr>
-                  </div>
-                </table>
-              </form>
-
-              <div ng-show="priceError" class="alert alert-danger">
-                Er ging iets fout bij het opslaan van de prijs.
-              </div>
-              <div ng-show="invalidPrice" class="alert alert-danger">
-                Gelieve een geldige prijs en omschrijving in te voeren.
-              </div>
-
-            </div>
-          </div>
-        </div>
+        <price-info price="price"></price-info>
 
         <form name="step5TicketsForm" class="css-form">
           <div class="row extra-tickets-website" ng-class="bookingInfoCssClass">
