--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -61,11 +61,7 @@
             <tr>
               <td><strong>Beschrijving</strong></td>
               <td>
-                <div ng-if="eventIsEditable">
-                  <div ng-bind-html="event.description" onbeforesave="updateDescription($data)" class="event-detail-description"
-                       editable-textarea="event.description" e-rows="6" e-cols="33"></div>
-                </div>
-                <i ng-if="!eventIsEditable" class="fa fa-circle-o-notch fa-spin"></i>
+                <div ng-bind-html="event.description" class="event-detail-description"></div>
               </td>
             </tr>
             <tr>
