--- a/src/uitpas/organisation-uitpas-typeahead-template.html
+++ b/src/uitpas/organisation-uitpas-typeahead-template.html
@@ -1,1 +1,1 @@
-<uitpas-organisation-suggestion organisation="match.model"></uitpas-organisation-suggestion>
+<a uitpas-organisation-suggestion organisation="match.model" query="query"></a>
