--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -89,14 +89,19 @@
             <div class="col-sm-8">
               <section>
                 <div class="form-group clearfix" ng-hide="ageRange === AgeRange.ALL">
-                  <select class="form-control leeftijd-incomplete-select"
-                          ng-change="ageRangeChanged(ageRange)"
-                          ng-model="ageRange"
-                          ng-options="range.label for range in ageRanges">
-                    <option value="">Kies een leeftijdscategorie</option>
-                  </select>
-
-                  <a class="btn btn-link" ng-show="ageRange === null" ng-click="setAllAges()">Alle leeftijden</a>
+                  <div class="row">
+                    <div class="col-xs-7">
+                      <select class="form-control leeftijd-incomplete-select"
+                              ng-change="ageRangeChanged(ageRange)"
+                              ng-model="ageRange"
+                              ng-options="range.label for range in ageRanges">
+                        <option value="">Kies een leeftijdscategorie</option>
+                      </select>
+                    </div>
+                    <div class="col-xs-5">
+                      <a class="btn btn-link" ng-show="ageRange === null" ng-click="setAllAges()">Alle leeftijden</a>
+                    </div>
+                  </div>
                 </div>
                 <div class="form-inline form-group" ng-show="ageRange && ageRange !== AgeRange.ALL">
                   <div class="form-group">
