III-1457 put always the no location found button under location suggestion list

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -52,6 +52,7 @@
                      typeahead-on-select="selectLocation($item, $model, $label)"
                      typeahead-min-length="3"
                      typeahead-template-url="templates/place-suggestion.html"
+                     typeahead-popup-template-url="templates/place-suggestion-popup.html"
                      udb-auto-scroll/>
               <div class="plaats-adres-resultaat dropdown-menu-no-results"
                    ng-show="(!cityHasLocations() || filteredLocations.length === 0) && locationsSearched">
