--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -41,7 +41,7 @@
               </section>
               <section class="state complete">
                 <div ng-bind-html="eventFormData.description.nl" class="description-text"></div>
-                <a class="btn btn-link" ng-click="alterDescription()">Wijzigen</a>
+                <p><a ng-click="alterDescription()">Wijzigen</a></p>
               </section>
               <section class="state filling">
                 <div class="form-group">
