III-1492 make uitpas data only available for events

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -186,7 +186,7 @@
 
         <price-info price="price"></price-info>
 
-        <div class="row extra-uitpas" ng-show="eventFormData.organizer.isUitpas">
+        <div class="row extra-uitpas" ng-show="eventFormData.organizer.isUitpas && eventFormData.isEvent">
           <div class="extra-task" ng-class="uitpasCssClass">
             <div class="col-sm-3">
               <em class="extra-task-label">UiTPAS</em>
