III-1492 implement update uitpas data service for an event

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -213,6 +213,9 @@
                   </span>
                 </span>
               </div>
+              <div ng-show="uitpasError" class="alert alert-danger">
+                Er ging iets fout bij het opslaan van de UiTPAS info.
+              </div>
             </div>
           </div>
         </div>
