--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -185,7 +185,7 @@
         </div>
 
         <price-info price="price"></price-info>
-        <uitpas-info organizer="eventFormData.organizer" price="price"></uitpas-info>
+        <uitpas-info organizer="eventFormData.organizer"></uitpas-info>
 
         <form name="step5TicketsForm" class="css-form">
           <div class="row extra-tickets-website" ng-class="bookingInfoCssClass">
