--- a/src/search/ui/event.directive.html
+++ b/src/search/ui/event.directive.html
@@ -13,7 +13,7 @@
       <span class="udb-theme" ng-bind="event.theme.label"></span>
     </div>
     <div class="udb-title">
-      <a ng-href="{{ event.url }}" ng-bind="event.name"></a>
+      <a ng-href="{{ event.url + '/preview' }}" ng-bind="event.name"></a>
     </div>
   </div>
 
