III-1600 change placeholder location-search

--- a/src/event_form/steps/event-form-step3.html
+++ b/src/event_form/steps/event-form-step3.html
@@ -43,7 +43,7 @@
           <div id="locatie-kiezer" ng-hide="selectedLocation || loadingPlaces">
             <span style="position: relative; display: block; direction: ltr;" class="twitter-typeahead">
               <input type="text" ng-change="locationSearched()"
-                     placeholder="Locatie"
+                     placeholder="Naam of adres"
                      class="form-control typeahead"
                      ng-model="locationAutocompleteTextField"
                      uib-typeahead="location.id as location.name for location in filteredLocations = (locationsForCity | filter:filterCityLocations($viewValue)) | orderBy:orderCityLocations($viewValue) | limitTo:50"
