--- a/src/uitpas/organisation-uitpas-typeahead-template.html
+++ b/src/uitpas/organisation-uitpas-typeahead-template.html
@@ -1,1 +1,4 @@
-<a uitpas-organisation-suggestion organisation="match.model" query="query"></a>
+<a>
+    <span class="organisation-name" ng-bind-html="match.model.name | uibTypeaheadHighlight:query"></span>
+    <small ng-if="match.model.isUitpas" class="label label-default uitpas-tag">UiTPAS</small>
+</a>
