--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -150,7 +150,7 @@
               <section class="state complete">
                 <span>
                   <span ng-bind="eventFormData.organizer.name"></span>
-                  <a class="btn btn-link close" ng-click="deleteOrganizer()" data-dismiss="modal" aria-label="Close">
+                  <a class="close" ng-click="deleteOrganizer()">
                     <span aria-hidden="true"> &times;</span>
                   </a>
                 </span>
