III-1640: Event migration footer component

--- a/src/migration/event-migration.html
+++ b/src/migration/event-migration.html
@@ -6,8 +6,6 @@
 
     <udb-event-form-step3></udb-event-form-step3>
 
-    <div class="event-validation">
-        <button type="submit" class="btn btn-success">Doorgaan met bewerken</button>
-    </div>
+    <udb-event-migration-footer></udb-event-migration-footer>
 </div>
 
